<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_audio_trimmer"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_album"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/placeholder_track_author" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_track_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12sp"
                android:text=""
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="10sp"
                android:ellipsize="end"
                android:text="@string/placeholder_track_title"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_height="wrap_content">

        <com.litpic.litpicsdkdroid.audiotrimming.customviews.SoundWaveView
            android:id="@+id/sound_wave_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.litpic.litpicsdkdroid.audiotrimming.customviews.AudioRangeSeekBar
            android:id="@+id/audio_range_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_end_time"
            android:layout_below="@+id/tv_start_time" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sound_wave_view"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/placeholder_start_time"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sound_wave_view"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:text="@string/placeholder_end_time"
            android:textColor="@color/white"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_audio_button"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/start"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_audio_button"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/exit"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>