<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/vs_tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_str_place_holder"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/vs_rv_speed_options"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/vs_tv_total_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/vs_iv_clock_icon"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_slow_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bg_white_corners"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/slow_two"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_slow_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_white_corners"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/slow_one"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/vs_iv_clock_icon"
            android:src="@drawable/speed_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/vs_iv_clock_icon"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_speed_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_corners"
                android:paddingStart="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/fast_one"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_speed_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bg_white_corners"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/fast_two"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vs_rv_range_seek"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vs_rv_speed_options">

        <com.litpic.litpicsdkdroid.trimmermodule.view.TimeLineView
            android:id="@+id/speed_time_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <com.litpic.litpicsdkdroid.trimmermodule.view.RangeSeekBarView
            android:id="@+id/speed_range_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

</RelativeLayout>